<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_group"
        android:title="@string/group"
        android:icon="@drawable/ic_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:title="@string/order"
        android:icon="@drawable/ic_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />

</menu>
